--- a/home/index.html
+++ b/home/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>home</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
-
+<h1>我是首页</h1>
 </body>
 </html>
